[package]
name = "kovi-plugin-meme"
version = "0.1.4"
edition = "2024"

description = "kovi meme plugin"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yiranxiaohui/kovi-plugin-meme"
repository = "https://github.com/yiranxiaohui/kovi-plugin-meme"
documentation = "https://docs.rs/kovi-plugin-meme"

[dependencies]
kovi = ">=0.12.5"
meme_generator = "0.2.2"
reqwest = { version = "0.12.24", features = ["default", "json", "rustls-tls"] }
base64 = "0.22.1"
indicatif = "0.18.3"
tokio = "1.48.0"